app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 
 */
 
 main a{
    
    background-color: #F76F8E;   
    border: none;
    color: #FFEAD0;
    padding: 8px 10px;
    text-decoration: none;
    cursor: pointer;
    
}

.header_image{
    
    padding-top: 40px;
    padding-bottom: 10px;
    
}


body{
    
    font-family: "Arial", serif;
    width: 1000px;
    margin: 0 auto;
    background-color: #FFD8AD;
    /*min-height: 100%;*/
    color: #37505C;
    
}

.navbar{

    background-color: #FFEAD0;
    height: 50px;

}

.navbar a {
    
    color: #37505C;
    font-size: 20px;
    text-decoration: none;
    padding: 14px 16px;
    float: left;
    font-weight: bold;

}

.navbar a:hover{

    background-color: #F76F8E;
    color: #FFEAD0;
    
}

main{
    
    width: 1000px;
    background-color: #FFEAD0;
    /*height: 100%;*/

}

.content{
    
    margin: 15px;
    padding-top: 5px;
    overflow: auto;
}

label{
    
    font-size: 20px;
}

input[type=button], input[type=submit] {
    
    background-color: #F76F8E;   
    border: none;
    color: white;
    padding: 10px 10px;
    text-decoration: none;
    cursor: pointer;
    
}
input[type=text] {
    
    border: none;
    padding: 10px 10px;
    text-decoration: none;

}
table {
    width: 100%;
}
td,th {
    
    padding:10px;
    border-bottom: 1px solid #ddd;
}



table a{
    
     background-color: #37505C;   
    border: none;
    color: #FFEAD0;
    padding: 8px 10px;
    text-decoration: none;
    cursor: pointer;
    
}

table a:hover{
    
     background-color: #F76F8E;   
    color: #FFEAD0;

    
}

